--- a/package.json
+++ b/package.json
@@ -22,13 +22,14 @@
     "react-loader": "^2.4.5",
     "react-loading": "^2.0.3",
     "react-notification-system": "^0.2.17",
-    "react-paginate": "^5.2.4",
+    "react-paginate": "^5.3.1",
     "react-redux": "^7.1.0",
     "react-rte": "^0.16.1",
     "react-scripts": "3.0.1",
     "react-select": "^2.0.0",
     "react-spinners-kit": "^1.8.0",
     "react-stepper-horizontal": "^1.0.11",
+    "react-tabs": "^3.0.0",
     "recharts": "^1.2.0",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
