--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^16.8.6",
     "react-confirm-alert": "^2.4.1",
     "react-data-export": "^0.5.0",
+    "react-data-table-component": "^3.0.4",
     "react-dom": "^16.8.6",
     "react-dropdown-multiselect": "^1.0.0",
     "react-images": "^0.5.19",
