Code Changes & CropList Expandable Component.

--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "pubsub-js": "^1.7.0",
     "pure-react-carousel": "^1.17.0",
     "react": "^16.8.6",
+    "react-bootstrap": "^1.0.0-beta.12",
     "react-confirm-alert": "^2.4.1",
     "react-data-export": "^0.5.0",
     "react-data-table-component": "^3.0.4",
     "react-dom": "^16.8.6",
     "react-dropdown-multiselect": "^1.0.0",
+    "react-google-maps": "^9.4.5",
     "react-images": "^0.5.19",
     "react-js-pagination": "^3.0.2",
     "react-loader": "^2.4.5",
@@ -53,7 +55,6 @@
     "bootstrap": "^4.3.0",
     "crypto-js": "^3.1.9-1",
     "lodash": "^4.17.11",
-    "react-bootstrap": "^0.32.3",
     "react-fontawesome": "^1.6.1",
     "react-localization": "^1.0.10",
     "react-notification-system": "^0.2.17",
