Current Retailer Changes

--- a/package.json
+++ b/package.json
@@ -3,17 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd": "^3.23.2",
     "bootstrap-less": "^3.3.8",
     "font-awesome": "^4.7.0",
+    "install": "^0.13.0",
     "iso-country-currency": "^0.3.4",
     "jquery": "^3.3.1",
     "jwt-decode": "^2.2.0",
     "moment": "^2.24.0",
     "node-sass": "^4.12.0",
+    "npm": "^6.11.3",
+    "prop-types": "^15.7.2",
     "pubsub-js": "^1.7.0",
     "pure-react-carousel": "^1.17.0",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.12",
+    "react-bootstrap-table": "^4.3.1",
+    "react-bootstrap-table-next": "^3.2.0",
+    "react-bootstrap-table2-paginator": "^2.1.0",
+    "react-bootstrap-table2-toolkit": "^2.1.0",
     "react-confirm-alert": "^2.4.1",
     "react-data-export": "^0.5.0",
     "react-data-table-component": "^3.0.4",
@@ -33,6 +41,7 @@
     "react-spinners-kit": "^1.8.0",
     "react-stepper-horizontal": "^1.0.11",
     "react-tabs": "^3.0.0",
+    "reactstrap": "^8.0.1",
     "recharts": "^1.2.0",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
