--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "antd": "^3.23.2",
     "bootstrap-less": "^3.3.8",
     "font-awesome": "^4.7.0",
+    "google-maps-react": "^2.0.2",
     "install": "^0.13.0",
     "iso-country-currency": "^0.3.4",
     "jquery": "^3.3.1",
@@ -34,6 +35,7 @@
     "react-loading": "^2.0.3",
     "react-notification-system": "^0.2.17",
     "react-paginate": "^5.3.1",
+    "react-places-autocomplete": "^7.2.1",
     "react-redux": "^7.1.0",
     "react-rte": "^0.16.1",
     "react-scripts": "3.0.1",
@@ -42,7 +44,6 @@
     "react-stepper-horizontal": "^1.0.11",
     "react-tabs": "^3.0.0",
     "reactstrap": "^8.0.1",
-    "recharts": "^1.2.0",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "secure-web-storage": "^1.0.2",
@@ -73,7 +74,7 @@
     "react-router": "^4.3.1",
     "react-router-config": "^1.0.0-beta.4",
     "react-router-dom": "^4.3.1",
-    "recharts": "^1.2.0",
+    "recharts": "^1.7.1",
     "redux": "^4.0.0",
     "redux-devtools-extension": "^2.13.5",
     "redux-logger": "^3.0.6",
