--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "jquery": "^3.3.1",
     "jwt-decode": "^2.2.0",
     "moment": "^2.24.0",
+    "moment-range": "^4.0.2",
     "node-sass": "^4.12.0",
     "npm": "^6.11.3",
     "prop-types": "^15.7.2",
