--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-bootstrap-table2-paginator": "^2.1.0",
     "react-bootstrap-table2-toolkit": "^2.1.0",
     "react-confirm-alert": "^2.4.1",
+    "react-csv": "^1.1.1",
     "react-data-export": "^0.5.0",
     "react-data-table-component": "^3.0.4",
     "react-dom": "^16.8.6",
