--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "antd": "^3.23.2",
+    "bootstrap-daterangepicker": "^3.0.5",
     "bootstrap-less": "^3.3.8",
     "font-awesome": "^4.7.0",
     "google-maps-react": "^2.0.2",
@@ -20,6 +21,8 @@
     "pure-react-carousel": "^1.17.0",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.12",
+    "react-bootstrap-daterangepicker": "^4.1.0",
+    "react-bootstrap-datetimerangepicker": "^2.0.4",
     "react-bootstrap-table": "^4.3.1",
     "react-bootstrap-table-next": "^3.2.0",
     "react-bootstrap-table2-paginator": "^2.1.0",
@@ -35,6 +38,7 @@
     "react-js-pagination": "^3.0.2",
     "react-loader": "^2.4.5",
     "react-loading": "^2.0.3",
+    "react-multiselect-checkboxes": "^0.1.1",
     "react-notification-system": "^0.2.17",
     "react-paginate": "^5.3.1",
     "react-places-autocomplete": "^7.2.1",
