--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "install": "^0.13.0",
     "iso-country-currency": "^0.3.4",
     "jquery": "^3.3.1",
+    "js-datepicker": "^5.0.3",
     "jwt-decode": "^2.2.0",
     "moment": "^2.24.0",
     "moment-range": "^4.0.2",
