--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-js-pagination": "^3.0.2",
     "react-loader": "^2.4.5",
     "react-loading": "^2.0.3",
+    "react-medium-image-zoom": "^3.1.2",
     "react-multiselect-checkboxes": "^0.1.1",
     "react-notification-system": "^0.2.17",
     "react-paginate": "^5.3.1",
