--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "antd": "^3.23.2",
     "bootstrap-daterangepicker": "^3.0.5",
     "bootstrap-less": "^3.3.8",
+    "eslint-config-react-app": "^5.0.2",
     "font-awesome": "^4.7.0",
     "google-maps-react": "^2.0.2",
+    "html2canvas": "^1.0.0-rc.5",
     "install": "^0.13.0",
     "iso-country-currency": "^0.3.4",
     "jquery": "^3.3.1",
@@ -36,6 +38,7 @@
     "react-dropdown-multiselect": "^1.0.0",
     "react-google-maps": "^9.4.5",
     "react-images": "^0.5.19",
+    "react-images-zoom": "^1.0.7",
     "react-js-pagination": "^3.0.2",
     "react-loader": "^2.4.5",
     "react-loading": "^2.0.3",
