--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-data-table-component": "^3.0.4",
     "react-dom": "^16.8.6",
     "react-dropdown-multiselect": "^1.0.0",
+    "react-dropdown-select": "^3.8.1",
     "react-google-maps": "^9.4.5",
     "react-images": "^0.5.19",
     "react-images-zoom": "^1.0.7",
