--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-dom": "^16.8.6",
     "react-dropdown-multiselect": "^1.0.0",
     "react-dropdown-select": "^3.8.1",
+    "react-geocode": "^0.2.1",
     "react-google-maps": "^9.4.5",
     "react-images": "^0.5.19",
     "react-images-zoom": "^1.0.7",
