--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "secure-web-storage": "^1.0.2",
+    "simple-excel-to-json": "^2.2.1",
     "styled-components": "^4.1.3",
     "tempa-xlsx": "0.0.1",
     "xlsx": "^0.14.1"
