--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-csv": "^1.1.1",
     "react-data-export": "^0.5.0",
     "react-data-table-component": "^3.0.4",
+    "react-do-tree-select": "^1.3.7",
     "react-dom": "^16.8.6",
     "react-dropdown-multiselect": "^1.0.0",
     "react-dropdown-select": "^3.8.1",
