--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-google-maps/api": "^1.8.5",
     "antd": "^3.23.2",
     "bootstrap-daterangepicker": "^3.0.5",
     "bootstrap-less": "^3.3.8",
@@ -15,6 +16,7 @@
     "jquery": "^3.3.1",
     "js-datepicker": "^5.0.3",
     "jwt-decode": "^2.2.0",
+    "leaflet.markercluster": "^1.4.1",
     "moment": "^2.24.0",
     "moment-range": "^4.0.2",
     "node-sass": "^4.12.0",
@@ -34,7 +36,7 @@
     "react-csv": "^1.1.1",
     "react-data-export": "^0.5.0",
     "react-data-table-component": "^3.0.4",
-    "react-do-tree-select": "^1.3.7",
+    "react-do-tree-select": "^1.3.9",
     "react-dom": "^16.8.6",
     "react-dropdown-multiselect": "^1.0.0",
     "react-dropdown-select": "^3.8.1",
